@@ -1,3 +1,9 @@
+Thu Oct 11 00:38:56 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (display): Connect up the decompression pipeline in the
+	  display_to_stdout case too (Debian bug #446189).
+	  (checked_system): Remove, no longer used.
+
 Thu Oct 11 00:21:49 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (make_roff_command): Perform input encoding conversion
